objects/Committee__c.object
<CustomObject><fields>
        <fullName>enddate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>isactive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>numberofactivemembers__c</fullName>
        <label>Number of Active Members</label>
        <summaryFilterItems>
            <field>committeemember__c.status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>committeemember__c.committee__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>numberofvotingmembers__c</fullName>
        <label>Number of Voting Members</label>
        <summaryFilterItems>
            <field>committeemember__c.status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>committeemember__c.votingmember__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>committeemember__c.committee__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>purposecharter__c</fullName>
        <label>Purpose/Charter</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>startdate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Committee</label><nameField>
        <label>Committee Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Committees</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>